# StoneAge

./: .gitattributes  .gitignore  README.md  app.js  index.html  launch_studio.command  material-data.json  pyproject.toml  requirements.txt  styles.css
.github/workflows/: windows-build.yml
docs/: deepsea_automation_plan.md
packaging/windows/: WINDOWS_README.md  build.ps1  install_and_run.bat  launcher.py  run.bat
stoneage_studio/: __init__.py  __main__.py  adb.py  deepsea_action_library.py  deepsea_chest.py  deepsea_operation_recorder.py  flow.py  main_window.py  material_site_export.py  material_tool.py  material_web.py  ocr.py  storage.py  vision.py
stoneage_studio/coords/: __init__.py  coordinate_mapper.py  game_coord_reader.py  movement_calibrator.py
stoneage_studio/maps/: __init__.py  walkability_grid.py
stoneage_studio/material_db/: __init__.py  calculator.py  database.py  excel_importer.py  export_import.py  models.py  normalizer.py  price_calculator.py  search.py  settings.py
stoneage_studio/navigation/: __init__.py  approach_point_selector.py  local_movement_controller.py  path_planner.py  stuck_detector.py
tests/: test_deepsea_action_library.py  test_deepsea_chest_stats.py  test_deepsea_operation_recorder.py  test_material_db.py  test_material_site_export.py  test_material_web.py  test_presets.py
tools/: generate_app_icon.py
tools/spreadsheet_build/: build_deepsea6_chest_tool.mjs  build_deepsea6_chest_tool_matrix.py  build_deepsea6_chest_tool_openpyxl.py  build_deepsea6_chest_tool_simple.mjs  render_compat_preview.mjs  (+1 more)
(+5 files in other folders)
