[project]
name = "stoneage-script-studio"
version = "0.1.0"
description = "StoneAge Script Studio - a visual script maker for Stone Age automation."
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.6",
  "opencv-python>=4.8",
  "numpy>=1.24",
  "Pillow>=10.0",
  "rapidocr_onnxruntime>=1.4.4",
]

[project.optional-dependencies]
ocr = [
  "pytesseract>=0.3.10",
  "easyocr>=1.7.1",
  "paddleocr>=2.7.0",
]

[project.scripts]
stoneage-studio = "stoneage_studio.__main__:main"
stoneage-material-web = "stoneage_studio.material_web:main"
stoneage-material-site-export = "stoneage_studio.material_site_export:main"
